# ChangeLog for dev-db/sqlite
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/sqlite/ChangeLog,v 1.402 2012/03/20 16:51:35 ssuominen Exp $

  20 Mar 2012; Samuli Suominen <ssuominen@gentoo.org> sqlite-2.8.16-r5.ebuild:
  Respect environment LDFLAGS.

  20 Mar 2012; Samuli Suominen <ssuominen@gentoo.org> sqlite-2.8.16-r5.ebuild:
  Revert ${ED} to ${D} because of EAPI="0" by Agostino Sarubbo

  20 Mar 2012; Samuli Suominen <ssuominen@gentoo.org> sqlite-2.8.16-r5.ebuild,
  +files/sqlite-2.8.16-exit.patch:
  Include stdlib.h for function exit() in temp.c generation.

  20 Mar 2012; Agostino Sarubbo <ago@gentoo.org> sqlite-3.7.10.ebuild:
  Stable for amd64, wrt bug #408385

  16 Mar 2012; Brent Baude <ranger@gentoo.org> sqlite-3.7.10.ebuild:
  Marking sqlite-3.7.10 ppc for bug 408385

  16 Mar 2012; Brent Baude <ranger@gentoo.org> sqlite-3.7.10.ebuild:
  Marking sqlite-3.7.10 ppc64 for bug 408385

  05 Mar 2012; Markos Chandras <hwoarang@gentoo.org> metadata.xml:
  Remove betelgeuse

*sqlite-3.7.10 (18 Jan 2012)

  18 Jan 2012; Markos Chandras <hwoarang@gentoo.org> +sqlite-3.7.10.ebuild:
  Version bump. Ebuild by Arfrever

*sqlite-3.7.9 (05 Nov 2011)

  05 Nov 2011; Markos Chandras <hwoarang@gentoo.org> +sqlite-3.7.9.ebuild:
  Version bump. Ebuild by Arfrever

*sqlite-3.7.8 (20 Sep 2011)

  20 Sep 2011; Mike Gilbert <floppym@gentoo.org> +sqlite-3.7.8.ebuild:
  Version bump. Ebuild by Arfrever.

  17 Sep 2011; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Add Arfrever as proxy maintainer as requested by him.

  13 Sep 2011; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Drop maintainer due retirement, bug #246793

*sqlite-3.7.7.1-r1 (09 Sep 2011)
*sqlite-2.8.16-r5 (09 Sep 2011)

  09 Sep 2011; Tomáš Chvátal <scarabeus@gentoo.org>
  -sqlite-2.8.16-r4.ebuild, +sqlite-2.8.16-r5.ebuild,
  -files/sqlite-3.6.22-dlopen.patch,
  -files/sqlite-3.6.22-interix-fixes-amalgamation.patch, -sqlite-3.7.5.ebuild,