@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
 AUX maketcllib.sh 879 RMD160 6d9a0e79a79d5a2efd6074e6b439d4634600980e SHA1 d5bb6054d3c9a4132c92bd8c172a547bf2cc9d85 SHA256 e101ed11d908bfb7f57519a99674160b0273d6500d191f758f8a0d1e6ed78120
 AUX sqlite-2.8.15-alignement-fix.patch 538 RMD160 12407bbe5f1bcae243d4247b43bf63ce0e8becea SHA1 d67a8bb2de26b1d6b7222175bd7f69d28afffb1e SHA256 f61f2f36fed61438d13dbb09902078ef11f0c3e8c8a119f84030689a2f2add8f
@@ -11,30 +11,30 @@ DIST sqlite-autoconf-3070701.tar.gz 1748837 RMD160 c86c81ccc3ad1baec6f753090e5ce
 DIST sqlite-autoconf-3070800.tar.gz 1776215 RMD160 98bc0a4c5a341958c28861342a75686aef8b4dff SHA1 34852cfd49ddea440eb26a35ad32deee0176a724 SHA256 fd8c7f70db7e06b51196efccb937f2a657abc7b27ef61fe3a7fb8e72ac4dfa32
 DIST sqlite-autoconf-3070900.tar.gz 1783755 RMD160 03ec092aeb7cc5453935f6c8ae00558d472b710a SHA1 a9da98a4bde4d9dae5c29a969455d11a03600e11 SHA256 7be6cdb375505e5d9a4aee88b2ddb6ea0d9d29c9545114ff77b345e1fa812439
 DIST sqlite-autoconf-3071000.tar.gz 1801640 RMD160 8932a5cd4b596632c63af30cbd94c2b6c9d45377 SHA1 0442d5a1bff50153039951b09db649864d8af0bb SHA256 9c1775057af5cc8b6cc64808b9553d77beccf3757e16ecee3bc878404d9c43e3
+DIST sqlite-autoconf-3071100.tar.gz 1807754 RMD160 09df3232f4eb7032c0a6081670b2bdcb6d80e865 SHA1 a768f76b10df84d6a2c66178544d42725a8fdaf0 SHA256 2badc75dc536249bcd68c44d2a655724285d054303251eaff9d355194cb3476b
 DIST sqlite-doc-3070701.zip 3256079 RMD160 11c4a3fa4e53f644970ff487d3ca32e6c001e38b SHA1 6331814cacaad47fb1b940f29740ca6449b365ab SHA256 6d48322b9b22094f6e505b5d530836bb6b43e324251be1959c8bd3f0864e07a0
 DIST sqlite-doc-3070800.zip 3395664 RMD160 e4a858d78b3cad71e43a8bb73755e09290dccd38 SHA1 e8fec8ca866289477ea4249c219e07bc301d96c6 SHA256 f108aec039e1bfbc9d1ad7d34b7c67ca16c8879ee67f8b1fdea8134ce96c3de1
 DIST sqlite-doc-3070900.zip 3332830 RMD160 841495870094ab3314bfcecd82e182548fa483fe SHA1 2d4a25f75cc6b7251f1b49b828f9fd1d699fc8a2 SHA256 bfd8238d9f12cb7914f31f74689d5b97d0549ce47d4b572fe6574e9c75821de3
 DIST sqlite-doc-3071000.zip 3630343 RMD160 6a75f7c10a8421a99e28c5430ab4f0a0ac09e6d6 SHA1 9957b9f2e955d82b2484cb44cc6fb4a53313d085 SHA256 f74c3681111d35a58449b0c1851a8f852b9cb8c4ec19a6f0ecaae9f2d1f7ca28
+DIST sqlite-doc-3071100.zip 4069512 RMD160 388bbcccb69d458f48f044bd65d282d9cf48dbe2 SHA1 87cbed1918c2604daefd3588a8555067e55e53cf SHA256 78541dd7190208d604a933f522a86d775422df44262310212189015b4b0f26ca
 DIST sqlite-src-3070701.zip 4562259 RMD160 189d5599712b056f8cf9c763326c568c78cd07f8 SHA1 e30c4de765a1569dc74e2fe12966bc859f4739e5 SHA256 898bfc1cf80c8af26b3107d19db224b457953e8e3ff4bbc69bd70ecb9ab2db39
 DIST sqlite-src-3070800.zip 4614579 RMD160 7ce1777fb866ef56460a335b48c2ebb6d1156188 SHA1 70201da90a0184b5a77270950bb7c0a8155c57a6 SHA256 a1c44be6f4eb3a903fc449f30fb0fb0a4df259a10b8685138e97146d24268899
 DIST sqlite-src-3070900.zip 4639586 RMD160 82917145ed643d9c1a22a3cbbb57a4140b6c658c SHA1 d0f7661f06c246429f75973b61c7e620f5ec43cd SHA256 6ebffe166267fb783056a4200d7500289cc366ca287c9b3457dbd46a26d704d0
 DIST sqlite-src-3071000.zip 4682084 RMD160 64f2fc871bcb129a2cedc92da02ef668bb95689a SHA1 23baab0a89d77e7b1a9a0ececd05dd629a2b098d SHA256 e976196a9c64bd152917760a134834a881c9eebc34f49125102a8918c5cd86a4
+DIST sqlite-src-3071100.zip 4705421 RMD160 4dd380ef7f29f957e5504ca9f7c5d48aec5b0bea SHA1 4bcb60c0a79e42fe01c64108deac66473123f4e7 SHA256 939262fe70b5e4dcd04f29d6f1d8221542f24e71adf72f0d4a8c671d8b6d9441
 EBUILD sqlite-2.8.16-r5.ebuild 2885 RMD160 db64d4a97381ccbf02e4887a0d22ac842db7688b SHA1 0f7d7413d1b172b8879c2eee36bc621fc1880fc3 SHA256 e156b3d60451ac6508d66128a5d1aca13bc3b60f77af10e272a595ea85e7f8c9
 EBUILD sqlite-3.7.10.ebuild 4433 RMD160 c9f794cdd6a93c8e0deda922b52a798db0472152 SHA1 d2cc47f47384fb4f05226d14a75fb63290a28a38 SHA256 57e1c5f8bab50027ca2ed5f10b2dbd9e8f029c074ed61404f2dc1452ceb7eedd
+EBUILD sqlite-3.7.11.ebuild 4440 RMD160 8cd02a24a172908f4887892237a518a316a89840 SHA1 fa6f69c1ae0692849d6a964353d6d12ab7a22b01 SHA256 6ff1611d0a89de9d338013a709b722c71f5954cb0b499a1b4b50faa6ff50c70f
 EBUILD sqlite-3.7.7.1-r1.ebuild 4600 RMD160 89b0f0c9bd32dda76eaa257ad259dcb88426f1fc SHA1 baa833ccccdf5c57dcd5253a6a4a1e79bc74128b SHA256 90aaf9a1c6604233643a0be0524cac7cf3aa109c24c70621ad26880ca5c16fea
 EBUILD sqlite-3.7.7.1.ebuild 4650 RMD160 1fc980ef57fe739f1256888e76ba6fc998c24090 SHA1 73793212baf59f87ca5bb1cb6a80e9abf64dffb9 SHA256 1b48b5cf99fc5ce1f9f1cc78ab6a6c963129a02173c1752b11124094313118a2
 EBUILD sqlite-3.7.8.ebuild 4449 RMD160 8d8eef2424c2ba02ca212b2d989e0aa3c6bac083 SHA1 1719eac6dd6e56f495517a9a0923dccb81b4686c SHA256 5573baf979cc32c8167366bf3839d8655a07f36fb8cf92992d3756807aabd2e9
 EBUILD sqlite-3.7.9.ebuild 4442 RMD160 99178ee836a7231f77ae228a914c99cfe0be5ab5 SHA1 07659236f228a3ecf22aef996065f75c42b62043 SHA256 638a45a9f35ab96c7cd5873f2293f98e87dd95d7d60a7d0d628ddb8fd75969cf
-MISC ChangeLog 55279 RMD160 f6a7a22925e2cb4aacd910de7b56bba9f5d4b570 SHA1 124fb1918923ee577590dff488dcf0805bf2537a SHA256 5e2acc25e1f22ea8bbf03d44f0f372e4552e5fcab123b37482b94400e727c64c
+MISC ChangeLog 55416 RMD160 fb05ff9fb1ab9d684af489f1e6c0f02459896ac1 SHA1 ffa01f3a315f6c14a1ebca814b3b28adde3509f0 SHA256 61dea31aa315c4278720acf62264536b2afda2794f584f32bdda3289c6eb7a32
 MISC metadata.xml 902 RMD160 1994502e7391970f54cbd9bfa641af1a16ee1547 SHA1 825100f8794d6308d06beee9d69dd80f548aaf5d SHA256 6cbb366bfd9b6ff881ab0c589b97667ef78426fa1fc1619abf20c098ddf58c94
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iQEcBAEBAgAGBQJPaLWdAAoJEEdUh39IaPFNmAQH/iyJGXagPSgA5FdjGReq0Q0K
-zX/TFGH0H3Np1oidZOpn/OBPc9CgBaeXr4eQpqf32qoJm7SYjxCLmT4rrT8D7tuI
-PDcQ+rRFJteIRqpHuHTQ5SFomYJtauClK7h5Ytwh0HLf5v/+/8mffA3aaL89+QWU
-Ys5hjl3xHdvX007Sasu/HbenzDMoN59PgDsBxb7YLVBha1BEFK6mgpUSsTGdq3y8
-h/8+U8m6ooK/XibARxEztm+Doo+S9gI4dZq0aKlYQx76dzTv7WWhL6IswQjt8yRm
-IROubVrjBTUbYY7354JWLuBY/3JfU0NOiX7M/tDX3G3UBcuPKX5C/oVovTQRDEQ=
-=o/wM
+iF4EAREIAAYFAk9o3yQACgkQC77qH+pIQ6TRZAD8DRrfCCJOalG4diboe1g/7c/t
+IJP2gFmnn/5bKU4XHGcA/3FUvJtRJi2soX/iDAxUeN7q4njj589Xr/6QuxVOtD1l
+=KtSA
 -----END PGP SIGNATURE-----
