@@ -1,6 +1,11 @@
 # ChangeLog for dev-db/sqlite
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/sqlite/ChangeLog,v 1.402 2012/03/20 16:51:35 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/sqlite/ChangeLog,v 1.403 2012/03/20 19:48:46 floppym Exp $
+
+*sqlite-3.7.11 (20 Mar 2012)
+
+  20 Mar 2012; Mike Gilbert <floppym@gentoo.org> +sqlite-3.7.11.ebuild:
+  Version bump. Ebuild by Arfrever.
 
   20 Mar 2012; Samuli Suominen <ssuominen@gentoo.org> sqlite-2.8.16-r5.ebuild:
   Respect environment LDFLAGS.
